# CASE-Implementation-PROV-O

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CODEMETA.yaml  Makefile  README.md  README_PyPI.md  THIRD_PARTY_LICENSES.md  setup.cfg
.github/: CODEOWNERS
.github/workflows/: ci.yml  cicd.yml  supply-chain.yml
case_prov/: __init__.py  case_prov_check.py  case_prov_dot.py  case_prov_rdf.py
case_prov/queries/: __init__.py  construct-Activity.sparql  construct-Agent.sparql  construct-Association.sparql  construct-Attribution.sparql  construct-Collection.sparql  construct-Communication.sparql  construct-Delegation.sparql  construct-Derivation.sparql  construct-Entity.sparql  construct-Generation.sparql  construct-Person.sparql  construct-SoftwareAgent.sparql  construct-Usage.sparql  construct-actedOnBehalfOf.sparql  construct-used-nothing.sparql  construct-used.sparql  construct-wasAssociatedWith.sparql  construct-wasAttributedTo.sparql  construct-wasDerivedFrom-map.sparql  construct-wasDerivedFrom.sparql  construct-wasGeneratedBy.sparql  construct-wasInformedBy-map.sparql  construct-wasInformedBy.sparql
case_prov/shapes/: .gitignore  Makefile  case-prov.ttl  prov-shapes.ttl
figures/: Makefile  readme-activities.ttl  readme-attribution.ttl  readme-provenance-records.ttl
tests/: Makefile
tests/CASE-Examples/examples/: Makefile  exif_data-prov.ttl  network_connection-prov.ttl
tests/CASE-Examples/examples/illustrations/: Makefile
tests/CASE-Examples/examples/illustrations/Oresteia/: Makefile  Oresteia-prov.ttl
tests/CASE-Examples/examples/illustrations/accounts/: accounts-prov.ttl
tests/CASE-Examples/examples/illustrations/analysis/: Makefile  analysis-prov.ttl  case_prov_check.ttl
tests/CASE-Examples/examples/illustrations/call_log/: call_log-prov.ttl
tests/CASE-Examples/examples/illustrations/cell_site/: case_prov_check.ttl  cell_site-prov.ttl
tests/CASE-Examples/examples/illustrations/configured_tool/: case_prov_check.ttl  configured_tool-prov.ttl
tests/CASE-Examples/examples/illustrations/device/: Makefile
tests/CASE-Examples/examples/illustrations/exif_data/: exif_data-prov.ttl
tests/CASE-Examples/examples/illustrations/forensic_lifecycle/: Makefile  case_prov_check.ttl  forensic_lifecycle-prov.ttl
tests/CASE-Examples/examples/illustrations/network_connection/: case_prov_check.ttl  network_connection-prov.ttl
tests/CASE-Examples/examples/illustrations/reconstructed_file/: case_prov_check.ttl  reconstructed_file-prov.ttl  reconstructed_file.json
tests/CASE-Examples/examples/illustrations/src/: illustration.mk
tests/casework.github.io/examples/: Makefile
tests/casework.github.io/examples/asgard/: Makefile  asgard-prov.ttl  case_prov_check.ttl
tests/casework.github.io/examples/crossover/: crossover-prov.ttl
tests/casework.github.io/examples/crossover_heist/: case_prov_check.ttl  crossover_heist-prov.ttl
tests/casework.github.io/examples/crossover_wmd/: case_prov_check.ttl  crossover_wmd-prov.ttl
tests/casework.github.io/examples/hardware_duplicator/: Makefile  case_prov_check.ttl  hardware_duplicator-prov.ttl
tests/casework.github.io/examples/owl_trafficking/: Makefile  case_prov_check.ttl  owl_trafficking-prov.ttl
tests/casework.github.io/examples/src/: example.mk
tests/casework.github.io/examples/urgent_evidence/: Makefile  README.md  case_prov_check.ttl  select-jpegs.sparql  test_urgent_evidence.py  urgent_evidence-prov.ttl
