[metadata]
name = case_prov
version = attr: case_prov.__version__
author = Alex Nelson
author_email = alexander.nelson@nist.gov
description = A mapping of CASE to W3C PROV
license_files = LICENSE
#TODO - PyPI will need a differently-written README.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/casework/CASE-Implementation-PROV
classifiers =
    Development Status :: 3 - Alpha
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
include_package_data = true
install_requires =
    case_utils
    prov
    pydot
    # TODO - This constraint on pyparsing can be removed when rdflib Issue #1190 is resolved.
    # https://github.com/RDFLib/rdflib/issues/1190
    pyparsing < 3.0.0
    rdflib-jsonld
    requests
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    case_prov_dot = case_prov.case_prov_dot:main
    case_prov_rdf = case_prov.case_prov_rdf:main

[options.package_data]
case_prov.queries = *.sparql
