[metadata]
name = case_prov
version = attr: case_prov.__version__
author = Alex Nelson
author_email = alexander.nelson@nist.gov
description = A mapping of CASE to W3C PROV
long_description = file: README_PyPI.md
long_description_content_type = text/markdown
url = https://github.com/casework/CASE-Implementation-PROV-O
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
license_files =
    LICENSE
    THIRD_PARTY_LICENSES.md

[options]
include_package_data = true
install_requires =
    case_utils >=0.11.0,< 0.12.0
    prov
    pydot
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    case_prov_check = case_prov.case_prov_check:main
    case_prov_dot = case_prov.case_prov_dot:main
    case_prov_rdf = case_prov.case_prov_rdf:main

[options.extras_require]
testing =
    case_utils[testing]

[options.package_data]
case_prov = py.typed
case_prov.queries = *.sparql
case_prov.shapes = *.ttl

[flake8]
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
extend-ignore =
  E203
  E501

[isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
profile = black
